Static IP Load Balancer

--- a/k8s/services/frontend.yaml
+++ b/k8s/services/frontend.yaml
@@ -18,6 +18,7 @@ metadata:
   name: gceme-frontend
 spec:
   type: LoadBalancer
+  loadBalancerIP: 35.188.42.123  
   ports:
   - name: http
     port: 80
